--- a/AppleTestes/App.xaml
+++ b/AppleTestes/App.xaml
@@ -3,6 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AppleTestes.App">
     <Application.Resources>
-
+        <Color x:Key="LightColor">#FFD700</Color>
+        <Color x:Key="Black">#363636</Color>
+        <Color x:Key="CabecalhoBlack">#000000</Color>
+       
     </Application.Resources>
 </Application>
